# openffa

./: .gitignore  Makefile  Makefile.m32  README  README.asciidoc  g_bans.c  g_chase.c  g_cmds.c  g_combat.c  g_curl.c  g_func.c  g_items.c  g_local.h  g_main.c  g_misc.c  g_phys.c  g_public.h  g_spawn.c  g_sqlite.c  g_svcmds.c  g_target.c  g_trigger.c  g_udp.c  g_utils.c  g_vote.c  g_weapon.c  m_player.h  meson.build  meson_options.txt  openffa.rc  p_client.c  p_hud.c  p_menu.c  p_view.c  p_weapon.c  q_list.h  q_platform.h  q_shared.c  q_shared.h  schema.sql  (+1 more)
.github/workflows/: build.yml
examples/: motd.txt  schema.sql  skins_file.txt  udp_logger.c
